--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,14 +11,17 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "workspace:*",
+    "@resunet/ui": "workspace:*",
     "next": "^15.2.1",
+    "next-auth": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@resunet/auth": "workspace:*",
+    "@resunet/eslint-config": "workspace:*",
+    "@resunet/typescript-config": "workspace:*",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^22.13.9",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
